Add officemuseum.com/: marquee

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1012,6 +1012,10 @@
           <a href="https://theloadstar.com/warning-to-ocean-carriers-dont-use-canal-crisis-to-price-gouge-customers/">Warning to ocean carriers: don't use canal crisis to 'price-gouge customers'</a>,
           <i class="website">The Loadstar</i>, 30.03.2021 (accessed on 31.03.2021).
         </li>
+        <li>
+          <a href="https://www.officemuseum.com/">Early Office Museum</a>:
+          uses marquee and animated GIFs (accessed on 31.03.2021).
+        </li>
       </ul>
       <p>Nested tables:</p>
       <ul>
