Add: Culturmag.de: marquee example

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1016,6 +1016,10 @@
           <a href="https://www.officemuseum.com/">Early Office Museum</a>:
           uses marquee and animated GIFs (accessed on 31.03.2021).
         </li>
+        <li>
+          <a href="http://culturmag.de/crimemag/peter-munder-200-jahre-fontane-teil-2/116986" hreflang="de" lang="de">Peter Münder: 200 Jahre Fontane (Teil 2)</a>:
+          marquee in the page header (<span lang="de">&laquo;Aktuell&rquo;) (access on 05.04.2021).
+        </li>
       </ul>
       <p>Nested tables:</p>
       <ul>
