Add: Example of Using a Screen Reader with an Accessible PDF

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -78,7 +78,7 @@
           ** http://www.literacytrust.org.uk/about/faqs/710_how_can_i_assess_the_readability_of_my_document_or_write_more_clearly
           ** http://www.learningandwork.org.uk/misc/SMOG-calculator/smogcalc.php (Harry McLaughlin in 1969: SMOG. University of Nottingham)
         * Dyslexia: Fonts:
-          ** Neil Milliken: "On fonts and dyslexia", 16.04.2015: https://atrophiedmind.wordpress.com/2015/04/16/on-fonts-and-dyslexia/ 
+          ** Neil Milliken: "On fonts and dyslexia", 16.04.2015: https://atrophiedmind.wordpress.com/2015/04/16/on-fonts-and-dyslexia/
       -->
       <li>
         <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
@@ -262,6 +262,9 @@
         This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
         It is a freeware product, but users are not allowed to distribute copies of the software or to automate the accessibility evaluation process.
       </li>
+      <li><a href="https://www.youtube.com/watch?v=BQTB_Yik2as">How to check if a <abbr>PDF</abbr> is accessible using <abbr>PAC</abbr> 3 0</a>
+        (<i class="ytchannel">Accessibility</i> on YouTube (University of Akron University Libraries), 2 minutes, 25.06.2020).
+      </li>
       <li>
         <a href="https://www.axes4.com/axespdf-for-word-ueberblick.html" hreflang="de" lang="de">axes<abbr>PDF</abbr> für Word</a>:
         this is a commercial extension for Microsoft Word (version 2013 or higher) for Windows (Windows 7 or higher with .NET Framework 4.6.2).
@@ -345,7 +348,24 @@
         <i class="website">&lt;accessible-website-services&gt;</i>, 26.09.2020.
         (The <abbr>PDF</abbr> file that contains the information costs <abbr>USD</abbr> 25.)
       </li>
-      <!--https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
+      <li>
+        <a href="https://www.youtube.com/watch?v=YE5gZPUXu_A">Example of Using a Screen Reader with an Accessible <abbr>PDF</abbr></a>
+        (<i class="ytchannel">Lauren Alcorn</i> on YouTube, 2 minutes, 06.04.2016).
+      </li>
+      <!--
+        * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
+        * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
+          see https://equidox.co/
+        * "Tagged, accessible PDFs from Adobe InDesign - fast & reliably with MadeToTag", axaio software, 6 minutes, 17.08.2018: https://www.youtube.com/watch?v=Ap7_xcmeSU0
+          Video descriiption: "Karina Zander, Marketing & Sales Manager at axaio software, talks about tagged, accessible PDFs during a 5-minute talk at PDF Days 2018."
+          see https://www.axaio.com/doku.php/en:products:madetotag
+        * Boris Doubrov: "Open source implementation of PDF/UA validation", PDF Association, 30 minutes, 24.11.2020: https://www.youtube.com/watch?v=zW37iNxksHE
+          & https://www.pdfa.org/presentation/open-source-implementation-of-pdf-ua-validation/
+          from EU-funded Preforma project: http://www.preforma-project.eu/
+          https://verapdf.org/
+          https://github.com/veraPDF
+        * https://github.com/Mogztter/asciidoctor-web-pdf
+      -->
     </ul>
     <!--https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
