Add: h2: Other links

--- a/terminology.html
+++ b/terminology.html
@@ -307,14 +307,9 @@
       <li><abbr>UX</abbr> Acrobat:
         <a href="http://uxacrobat.com/ux-glossary/"><abbr>UX</abbr> Glossary</a>.
       </li>
-      <!--
-      <li>
-        <a href=""></a>
-      </li>
-      -->
     </ul>
 
-    <!-- 
+    <!--
       * "psychological disability"??
         * = psychische Behinderung? https://www.myhandicap.de/gesundheit/psychische-behinderung/ 
         * Boston University: Centre for Psychiatric Rehabilitation: "What is Psychiatric Disability and Mental Illness?" https://cpr.bu.edu/resources/reasonable-accommodations/what-is-psychiatric-disability-and-mental-illness
@@ -344,9 +339,6 @@
         (organisation that delivers disability awareness training).
       </li>
       <li>
-        <a href="https://www.disabilityrightsuk.org/">Disability Rights <abbr>UK</abbr></a>.
-      </li>
-      <li>
         <a href="https://www.understandingdisability.org/">Differing Abilities</a>
         (by the Spaulding Rehabilitation Network, Massachusetts, <abbr>USA</abbr>).
       </li>
@@ -358,7 +350,28 @@
     <p>See also <a href="https://www.understood.org/en/school-learning/partnering-with-childs-school/instructional-strategies/multisensory-instruction-what-you-need-to-know">Multisensory Instruction: What You Need to Know</a>
       by Amanda Morin.
     </p>
+    <p>Other links:</p>
+    <ul>
+      <li>
+        <a href="https://www.disabilityrightsuk.org/">Disability Rights <abbr>UK</abbr></a>.
+      </li>
+      <li><span lang="de">Brodersen, Imke:
+        <a href="http://translation-clinic.com/de/menschen-mit-behinderungen/" hreflang="de">Menschen mit Behinderungen: Die richtige Wortwahl im Englischen</a>,</span>
+        <i class="website">Translation Clinic</i>, 20.03.2017.
+      </li>
+    </ul>
 
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
