Add: Synote: a web-based video and audio annotation tool

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -537,6 +537,15 @@
         <i class="blog">Amara.org blog</i>, 2018; updated on 25.08.2020 (accessed on 06.04.2021).
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=adc2JD8xRJM">Synote: a web-based video and audio annotation tool</a>
+        (<i class="ytchannel">jiscsoftwarehub</i> on YouTube, 12 minutes, 06.09.2013).
+        <br />Professor Mike Wald of the University of Southampton explains the goals and benefits of Synote and how it differs from lecture capture tools. Video description:
+        <q>Dr Mike Wald was the principal investigator in the development of Synote, an open-source web-based video and audio annotation tool.
+        Dr Mike Wald talks to us about the drawbacks associated with lecture capture systems, the benefits of using transcription and annotation software and the development of Synote.
+        Synote is a piece of open source software developed by the University of Southampton using funding from Jisc. It has won awards, including the Times Higher Education Outstanding <abbr>ICT</abbr> Innovation Award.</q>
+        (The video has closed captions.)<!--@@correct the captions. See also 'Synote - Future Worlds Discover' at https://www.youtube.com/watch?v=aeaxnxqnauE -->
+      </li>
+      <li><del datetime="2021-04-06">
         <a href="http://www.synote.com/">Synote</a>
         is a tool for <q cite="http://www.synote.com/">creating synchronised online and paper notes and transcripts from lecture recordings</q>.
         According to the
@@ -544,6 +553,7 @@
         <q cite="http://synote.com/about/">[the tool’s] interactive transcript allows viewers to search videos for any word or phrase and replay the video from that point onwards.
         Screenshots with the corresponding transcript and notes can be printed out with QR codes to replay any part of the recording on any mobile device.
         Synote can also add interactive quizzes and polls to videos and produce playlists of clips as well as many other features.</q>
+        </del><ins datetime="2021-04-06">This site was unreachable in early April 2021.</del>
       </li>
     </ul>
     <p>The above list does not cover tools for adding captions or subtitles using respeaking and voice recognition.</p>
