Add example with flashing content

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -841,7 +841,7 @@
         </li>
         <li>Newell, Alan F.:
           <i class="booktitle">Design and the Digital Divide: Insights from 40 Years in Computer Support for Older and Disabled People</i>.
-          Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+          Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies.
           <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00369ED1V01Y201106ARH001">Morgan &amp; Claypool, 2011.</a> (195 pages)
         </li>
         <li>Petrick, Elizabeth R.:
@@ -986,6 +986,11 @@
         <li>Animated logo (top left) and e-mail image (bottom centre):
           <a href="http://axl.cefan.ulaval.ca/index.html" hreflang="fr" lang="fr">L'aménagement linguistique dans le monde: page d'accueil</i>
         </li>
+      </ul>
+      <p>Flashes:</p>
+      <ul>
+        <li><a href="https://www.theyuniversity.net/usefulidioms">Useful Idioms</a>,
+        <i class="website">The YUNiversity</i>: flashes in the image for the idiom &ldquo;put out the fire&rdquo; (accessed on 09.04.2021).
       </ul>
       <p>Autoplaying video (with audio):</p>
       <ul>
