Add: Examples of videos with captions

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -650,6 +650,19 @@
         When subtitling live interviews, some information may get shortened or partially skipped.
       </li>
     </ul>
+    <p>Examples of videos with captions:</p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=gN_PK5pXmIY">Do The Numbers On Toaster Dials Mean Minutes?</a>
+        (<i class="ytchannel">Tom Scott</i> on YouTube, 2 minutes, 09.12.2014).
+        <br />This video has closed captions in 24 languages (including the auto-generated captions).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=nyYvdacFC10">The Lock Picking Lawyer</a>
+        (<i class="ytchannel">Vala Secure</i> on YouTube, 98 seconds, 18.06.2020).
+        <br />A short video with open captions (one line per caption block).
+      </li>
+    </ul>
 
     <h3 id="audio-description">Audio Description</h3>
     <!--Audio description can also be helpful for autistic people: "autistic friends say it's helpful as they can't decode faces/body language." 
