Add download Checkliste Barrierefreie Präsentationen

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -1255,6 +1255,16 @@
       </li>
     </ul>
 
+    <section>
+      <h2>Downloads</h2>
+      <ul>
+        <li>
+          <a href="./downloads/BarrierefreiePraesentationen.Checkliste.pdf" hreflang="de" lang="de">Checkliste Barrierefreie Präsentationen (<abbr>PDF</abbr>)</a>:
+          a single-page handout (in German) with a few selected accessibility guidelines for presentations with Microsoft PowerPoint (version 2016) or LibreOffice Impress (version 7).
+        </li>
+      </ul>
+    <section>
+
     <!--
     <section>
       <h2></h2>
