Add example with animated gif: Mauspassant

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -986,6 +986,9 @@
         <li>Animated logo (top left) and e-mail image (bottom centre):
           <a href="http://axl.cefan.ulaval.ca/index.html" hreflang="fr" lang="fr">L'aménagement linguistique dans le monde: page d'accueil</i>
         </li>
+        <li><a href="http://www.maupassantiana.fr/Filmographie/Maupassant%20passeur%20d'images.htm" hreflang="fr" lang="fr">Maupassant, le passeur d’images</a>.
+          (Aninated GIF at the bottom; web page created with "Microsoft Word 11. Accessed on 12.04.2021.)
+        </li>
       </ul>
       <p>Flashes:</p>
       <ul>
