--- a/social-legal.html
+++ b/social-legal.html
@@ -462,6 +462,10 @@
         <a href="http://www.sozialerhebung.de/" hreflang="de">Sozialerhebung</a></span>.
         <!--@@ http://www.sozialerhebung.de/21sozialerhebung/documents/presse -->
       </li>
+      <i>Pocklington Trust, Thomas:
+        <a href="https://www.fenews.co.uk/press-releases/65294-blind-and-partially-sighted-students-struggling-to-access-online-exams">Blind and partially sighted students struggling to access online exams</a>,
+        <i class="website"><abbr>FE</abbr> News</i>, 17.03.2021.
+      </li>
       <!--Studying with a disability
         * https://best-umfrage.de/
         * Studierende mit studienerschwerenden Beeinträchtigungen: https://best-umfrage.de/best1-zentrale-ergebnisse/
