Add low contrast example: Law Industries

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -927,6 +927,10 @@
           (accessed 24.01.2021).
         </li>
         <li>
+          <a href="https://store.lawindustries.co.uk/">Law Industries</a>:
+          menu on the left: gray text on black background.
+        </li>
+        <li>
           <a href="https://totalanalysis.com/Covid19/TAIndex">Covid Data Transparency Index (<abbr>CDTI</abbr>)</a>,
           <i class="website">TotalAnalysis</i>.
           <br />The main table has a black background with columns that use various colours for the text. The contrasts look weak but pass the contrast test:
