Add: low contrast example: Skulima

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -931,6 +931,11 @@
           menu on the left: gray text on black background.
         </li>
         <li>
+          <a href="https://www.skulima.de/sachgebiete/germanistik.html" hreflang="de" lang="de">Germanistik - SKULIMA Wissenschaftliche Versandbuchhandlung</a>:
+          background colour of fly-out menus for <span lang="de">Germanistik</span> (yellow), <span lang="de">Slavistik</span>,
+          <span lang="de">Sprach- und Literaturwissenschaften</span> (orange): low contrast with the white text.
+        </li>
+        <li>
           <a href="https://totalanalysis.com/Covid19/TAIndex">Covid Data Transparency Index (<abbr>CDTI</abbr>)</a>,
           <i class="website">TotalAnalysis</i>.
           <br />The main table has a black background with columns that use various colours for the text. The contrasts look weak but pass the contrast test:
