Add: animated background: myprobe.de

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -979,6 +979,9 @@
       <p>Animated background:</p>
       <ul>
         <li>
+          <a href="https://myprobe.de/">Myprobe</a>: animated background using an <code>iframe</code> that loads a page containing a <code>canvas</code> element.
+        </li>
+        <li>
           <a href="https://psychoslinux.gitlab.io/">psychoslinux.gitlab.io</a> (background video; last accessed 24.01.2021).
         </li>
         <li>
