Add: Henry: Accessibility Overlays in Digital Content

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2024,6 +2024,10 @@
               is available on GitHub. The GitHub repository also contains a
               <a href="https://github.com/karlgroves/overlaysdontwork/blob/master/wishlist.md">wishlist of ideas that other can contribute</a>.
             </li>
+            <li>Henry, Brad:
+              <a href="https://www.tpgi.com/accessibility-overlays-in-digital-content/">Accessibility Overlays in Digital Content</a>,
+              <i class="blog"><abbr>TPGi</abbr> blog</i>, 13.05.2020.
+            </li>
             <li>Byrne-Haber, Sheri:
               <a href="https://medium.com/@sheribyrnehaber/overlays-are-not-the-solution-to-your-accessibility-problem-c5ffe44bd61f">Overlays are not the solution to your accessibility problem</a>,
               <i class="blog">Medium</i>, 14.01.2020 (4-minute read).
