Add example of invisible keyboard focus

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1015,6 +1015,13 @@
           Other accessibility issues on this page include empty heading elements, and images with the the attribute <code>alt="Default Alt Tag for this page"</code>.
         </li>
       </ul>
+      <p>Invisible keyboard focus:</p>
+      <ul>
+        <li>
+          <a href="https://www.skulima.de/" hreflang="de" lang="de">SKULIMA Wissenschaftliche Versandbuchhandlung</a>:
+          the fly-out menus on the left don't open on keyboard focus but can be tabbed through. Since the menus remain closed, the keyboard focus is invisible inside the menus.
+        </li>
+      </ul>
       <p>Live updates:</p>
       <ul>
         <li>
