Add: Fins et al: The American with Disabilities Act at 30

--- a/social-legal.html
+++ b/social-legal.html
@@ -356,6 +356,10 @@
         <i class="website">Disability Rights Advocates</i>, 14.04.2016.
         <br />As a consequence of this settlement, Netflix will provide audio description for much of its content.
       </li>
+      <i>Fins, Joseph J.; Bagenstos, Samuel:
+        <a href="https://theconversation.com/the-americans-with-disabilities-act-at-30-a-cause-for-celebration-during-covid-19-143399">The Americans with Disabilities Act at 30: A cause for celebration during COVID-19?</a>,
+        <i class="website">The Conversation</i>, 26.07.2020 (Creative Commons).
+      </li>
       <li>
         <a href="https://www.aoda.ca/the-act/">Accessibility for Ontarians with Disabilities Act</a>.
         <!--Referrer: https://twitter.com/bitvtest/status/1326463428962213888 -->
