Add: Hollier et a: Inaccessibility of CAPTCHA (W3C, 2019)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -957,6 +957,10 @@
       <h2 id="captcha"><abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart">CAPTCHA</abbr></h2>
       <h3 id="captcha-issues">Issues with <abbr>CAPTCHA</abbr></h3>
       <ul>
+        <li>Hollier, Scott; Sajka, Janina; White, Jason; Cooper, Michael:
+          <a href="https://www.w3.org/TR/turingtest/">Inaccessibility of <abbr>CAPTCHA</abbr>: Alternatives to Visual Turing Tests on the Web</a>,
+          <abbr>W3C</abbr> Working Group Note 09 December 2019.
+        </li>
         <li>May, Matt:
           <a href="https://www.w3.org/TR/turingtest/">Inaccessibility of <abbr>CAPTCHA</abbr>: Alternatives to Visual Turing Tests on the Web</a>,
           <abbr>W3C</abbr> Working Group Note 23 November 2005.
