Add: Living with a disability is very expensiv; The hidden extra costs of living with a disability

--- a/social-legal.html
+++ b/social-legal.html
@@ -603,6 +603,14 @@
         <i class="newspaper">Süddeutsche Zeitung</i>,</span> 16.03.2021.
         <br />(Seeing <abbr>AI</abbr> app von Microsoft, Erdin Ciplak (known as Mr. BlindLife on social media), VoiceOver, TalkBack, Friedhelm Turinsky, Detlev Fischer.)
       </li>
+      <i>Morris, Zachary; Goodman, Nanette; McGarity, Stephen:
+        <a href="https://theconversation.com/living-with-a-disability-is-very-expensive-even-with-government-assistance-157283">Living with a disability is very expensive – even with government assistance</a>,
+        <i class="website">The Conversation</i>, 23.03.2017 (Creative Commons).
+      </li>
+      <i>Mitra, Sophie; Mont, Daniel; Kim, Hoolda; Palmer, Michael; Groce, Nora:
+        <a href="https://theconversation.com/the-hidden-extra-costs-of-living-with-a-disability-78001">The hidden extra costs of living with a disability</a>,
+        <i class="website">The Conversation</i>, 26.07.2017 (Creative Commons).
+      </li>
       <li>
         <a href="https://www.cambridge.org/de/academic/subjects/law/human-rights/series/cambridge-disability-law-and-policy-series">Cambridge Disability Law and Policy Series</a>.
       </li>
