Add: h2: Mobile Apps

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -224,6 +224,14 @@
       -->
     </ul>
 
+    <h2>Mobile Apps</h2>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=DybczED-GKE">Seeing <abbr>AI</abbr></a>
+      (<i class="ytchannel">@@</i> on YouTube, @@ minutes, ).
+      </li>
+      <!--https://www.youtube.com/watch?v=DybczED-GKE&ab_channel=Microsoft-->
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Cole, Elliot:
