Add: Koena mise en demeure par FACIL’iti

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2122,6 +2122,18 @@
               (09.03.2021).
               <!--Referrer: Adrian Roselli: https://twitter.com/aardrian/status/1371885880328261632 -->
             </li>
+            <li><span lang="fr">Altinier, Armony:
+              <a href="https://koena.net/koena-mise-en-demeure-par-faciliti/" lang="fr">Koena mise en demeure par FACIL’iti</a>,
+              <i class="blog">Koena</i></span>, 22.04.2021.
+              <br />See also the two relevant tweets:
+              <a href="https://twitter.com/koenaFR/status/1374286546342322177" lang="fr">(&hellip;) NON, @FACIL_ITI ne permet pas de rendre #accessible son #site aux personnes en situation de #handicap, mais modifie seulement l’apparence des pages ! (&hellip;)</a>,
+              <a href="https://twitter.com/koenaFR/status/1374306427104202754" lang="fr">Donc pour être clair, @FACIL_ITI
+              ne rend pas #accessible des #formulaires, #images cliquables ou autres obstacles rencontrés par les #internautes en situation de #handicap, et n’assure pas non + la conformité au #RGAA! Ce n'est pas une solution miracle d'#AccessibilitéNumérique!</a>.
+              <!--Referrer:
+                Adrian Roselli / @aardrian: https://twitter.com/aardrian/status/1385558721963626496
+              See the company's site: https://www.facil-iti.fr/
+              and Twitter: https://twitter.com/FACIL_iti -->
+            </li>
           </ul>
         </li>
         <li>Koss, Hal:
