Add Burstahler's books

--- a/elearning.html
+++ b/elearning.html
@@ -237,6 +237,18 @@
         <i class="booktitle">Reach Everyone, Teach Everyone: Universal Design for Learning in Higher Education</i>. West Virginia University Press, 2018. (312 pages)
         <a href="https://wvupressonline.com/node/757"><abbr>ISBN</abbr> 978-1-946684-60-8</a>.
       </li>
+      <li>Burgstahler, Sheryl E.:
+        <i class="booktitle">Universal Design in Higher Education</i>. Second edition. Harvard Education Press, 2015. (384 pages)
+        <a href="https://www.hepg.org/hep-home/books/universal-design-in-higher-education-(1)#"><abbr>ISBN</abbr> 978-1-61250-816-0</a>.
+      </li>
+      <li>Burgstahler, Sheryl E.:
+        <i class="booktitle">Creating Inclusive Learning Opportunities in Higher Education: A Universal Design Toolkit</i>. Harvard Education Press, 2020. (248 pages)
+        <a href="https://www.hepg.org/hep-home/books/creating-inclusive-learning-opportunities-in-highe"><abbr>ISBN</abbr> 978-1-68253-540-0</a>.
+        <br />From the publisher's book description:
+        <q>In <i class="booktitle">Creating Inclusive Learning Opportunities in Higher Education</i>, Sheryl Burgstahler provides a practical, step-by-step guide for putting the principles of universal design into action.
+        The book offers multiple ways to access, engage with, and transform the higher education environment: making physical spaces welcoming to students of all abilities; creating digital learning and assistive technology programs that meet the needs of all users;
+        developing universal design in higher education (<abbr>UDHE</abbr>) syllabi, assessments and teaching practices that minimize the need for academic accommodations; and institutionalizing universal design supports and services. (&hellip;)</q>
+      </li>
       <li>Gronseth, Susie L.; Dalton, Elizabeth M. (editors):
         <i class="booktitle">Universal Access Through Inclusive Instructional Design: International Perspectives on <abbr>UDL</abbr></i>. Routledge, 2019. (404 pages)
         <a href="https://www.routledge.com/Universal-Access-Through-Inclusive-Instructional-Design-International-Perspectives/Gronseth-Dalton/p/book/9781138351080"><abbr>ISBN</abbr> 9781138351080</a>.
