Add: Byrne-Haber: Are bad captions better than no captions?

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -649,6 +649,19 @@
         The interviewee also explains when and how different colours for subtitles are used.
         When subtitling live interviews, some information may get shortened or partially skipped.
       </li>
+      <li>Byrne-Haber, Sheri;
+        <a href="https://sheribyrnehaber.medium.com/are-bad-captions-better-than-no-captions-cd284cfd14c7">Are bad captions better than no captions?</a>,
+        <i class="blog">Sheri Byrne-Haber, CPACC</i> on Medium, 29.03.2021 (seven-minute read).
+        <br />Google Chrome now has a feature for live captioning. The blog post lists several issues with automatically generated captions:
+        incorrectly recognised words, a lack of attribution when there are multiple speakers in a video, bad punctuation,
+        bad synchronisation and missing non-verbal sounds. 90% word accuracy is not very impressive is some of the other issues are present.
+        Examples of low accuracy abound. For example, in a speech by Mitt Romney, the words &ldquo;American Strength&rdquo; were captioned as &ldquo;airstrikes&rdquo;.
+        Caption accuracy can be affected by accents, acronyms, technical terms, non-English terms or names in the audio stream.
+        Captioning is not a lot of work nowadays, so it should be done all the time.
+        <br />See also
+        <a href="https://twitter.com/merylkevans/status/1359215719335006211">Meryl Evans's tweet showing three autocraptioned clips versus one that was captioned by hand</a>
+        (09.02.2021).
+      </li>
     </ul>
     <p>Examples of videos with captions:</p>
     <ul>
