Add: Leduc: NAD v. Harvard

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -662,6 +662,10 @@
         <a href="https://twitter.com/merylkevans/status/1359215719335006211">Meryl Evans's tweet showing three autocraptioned clips versus one that was captioned by hand</a>
         (09.02.2021).
       </li>
+      <li>Leduc, Jaclyn:
+        <a href="https://www.3playmedia.com/blog/harvard-mit-sued-captioning-violation-ada-rehabilitation-act/">Overview of <abbr title="National Association of the Deaf">NAD</abbr> <abbr>v.</abbr> Harvard and <abbr>NAD</abbr> <abbr>v.</abbr> <abbr>MIT</abbr> Lawsuits</a>,
+        <i class="blog">3Play Media blog</i>, 25.03.2020.
+      </li>
     </ul>
     <p>Examples of videos with captions:</p>
     <ul>
