Add: Google Chrome added support for live captioning

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -558,6 +558,22 @@
     </ul>
     <p>The above list does not cover tools for adding captions or subtitles using respeaking and voice recognition.</p>
 
+    <p>Google Chrome added support for live captioning in March 2021:</p>
+    <ul>
+      <li>Campbell, Ian Carlos:
+        <a href="https://www.theverge.com/2021/3/17/22337074/chrome-real-time-live-captions-audio-accessibility">Chrome now instantly captions audio and video on the web</a>,
+        <i class="website">The Verge</i>, 17.03.2021.
+      </li>
+      <li>Low, C.:
+        <a href="https://www.engadget.com/google-brings-live-caption-to-chrome-browser-160015973.html">Chrome can now caption all audio playing through the browser</a>,
+        <i class="website">Engadget</i>, 18.03.2021.
+      </li>
+      <li>Arici, Alexandra:
+        <a href="https://www.maketecheasier.com/enable-live-captions-in-chrome-desktop/">How to Enable Live Captions for Videos in Chrome for Desktop</a>,
+        <i class="website">Make Tech Easier</i>, 16.04.2021.
+      </li>
+    </ul>
+
     <h3>Tutorials and Articles on Captioning</h3>
     <ul>
       <li>University of Washington:
