Add: Untertitel-Standards von ARD ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -431,6 +431,10 @@
         <a href="https://www.daserste.de/service/kontakt-und-service/barrierefreiheit-im-ersten/untertitel-standards/index.html" hreflang="de">Untertitel-Standards</a>,
         <i class="website">Das Erste</i></span> (first published in April 2015).
       </li>
+      <li><span lang="de">
+        <a href="https://www.daserste.de/specials/service/untertitel-standards100.html" hreflang="de">Untertitel-Standards von <abbr>ARD</abbr>, <abbr>ORF</abbr>, <abbr>SRF</abbr>, <abbr>ZDF</abbr></a>,
+        <i class="website">Das Erste</i></span> (updated in April 2020).
+      </li>
       <li>
         <a href="http://www.untertitelrichtlinien.de/" hreflang="de" lang="de">Gemeinsame Untertitelrichtlinien für den deutschen Sprachraum</a>:
         guidelines defined by several associations that represent people with hearing impairments.
@@ -683,12 +687,14 @@
         <i class="blog">3Play Media blog</i>, 25.03.2020.
       </li>
     </ul>
-    <p>Examples of videos with captions:</p>
+    <p>Examples of videos with captions or subtitles:</p>
     <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=gN_PK5pXmIY">Do The Numbers On Toaster Dials Mean Minutes?</a>
         (<i class="ytchannel">Tom Scott</i> on YouTube, 2 minutes, 09.12.2014).
         <br />This video has closed captions in 24 languages (including the auto-generated captions).
+        Strictly speaking, these are just subtitles translated into many other languages:
+        the speakers are not identified and non-speech sounds are not transcribed.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=nyYvdacFC10">The Lock Picking Lawyer</a>
