Add: Xbox Accessibility Guidelines V2.1

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -153,6 +153,10 @@
         by providing resources for developers, publishers and researchers 
         in order to stimulate accessibility in games.</q>
       </li>
+      <li>
+        <a href="https://docs.microsoft.com/en-us/gaming/accessibility/guidelines">Xbox Accessibility Guidelines V2.1</a>,
+        <i class="website">Microsoft Docs</i>, 19.04.2021.
+      </li>
     </ul>
 
     <h2>Articles and Blogposts</h2>
