--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -356,11 +356,11 @@
     -->
 
     <h3 id="contrastcheck">Contrast Checkers</h3>
-    <p>Whether foreground and background colous have sufficient contrast is not 
+    <p>Whether foreground and background colous have sufficient contrast is not
       something that you should try to &ldquo;eyeball&rdquo;. For example,
       red and green are strongly contrastly contrasting colour for people with
       normal colour vision but not for most people with colour vision deficiencies.
-      There are many free tools that can help you check contrast, find colours with 
+      There are many free tools that can help you check contrast, find colours with
       sufficient contrast or simulate certain colour vision deficiencies. 
     </p>
     <p>Most contrast analysis tools now support the 
@@ -414,17 +414,7 @@
         <a href="https://github.com/ThePacielloGroup/CCA">GitHub</a>
         under the <span lang="en-US"><abbr>GNU</abbr> General Public License 2.0</span>.
       </li>
-      <li><a href="http://www.vischeck.com/vischeck/">Vischeck</a> is a tool that simulates
-        colour vision deficiencies (&ldquo;colour-blind vision&rdquo;).
-        The tool was developed as Stanford University; the
-        <a href="http://www.vischeck.com/info/">Info &amp; Links</a> page
-        provides information about the algorithms in the code and 
-        points to other interesting web pages about colour blindness.
-        <br />
-        <a href="http://www.vischeck.com/daltonize/">Daltonize</a> is a tool that
-        <q cite="http://www.vischeck.com/" lang="en-US">corrects images for colorblind viewers</q>.
-      </li>
-      <li>Joe Dolson's 
+      <li>Joe Dolson's
         <strong><a href="https://www.joedolson.com/tools/color-contrast-tester.php" lang="en-CA">Color Contrast Spectrum Tester</a></strong>
         is an online tool that helps you find colours that provide sufficient contrast
         with a colour of your choice. You can choose a colour using a colour picker
@@ -473,22 +463,6 @@
         <br />Warning: this tool is developed in Adobe Flash and is not keyboard
         accessible.
       </li>
-      <li><a href="http://colororacle.org/" lang="en-US">Color Oracle</a> is a free
-        and open source tool that simulates colour blindness.
-        <span lang="en-US">Color Oracle&rsquo;s</span> website also provides 
-        <a href="http://colororacle.org/design.html">design tips</a> for maps and
-        information graphics that are accessible for colour-impaired readers.
-        <br />The tool is written in Java and works on Windows, Mac OS X and Linux.
-        <a href="https://github.com/nvkelso/color-oracle-java"><span lang="en-US">Color Oracle&rsquo;s</span> 
-        source code</a> is available on GitHub under the <span lang="en-US"><abbr>MIT</abbr> License</span>.
-      </li>
-      <li>
-        <a href="https://michelf.ca/projects/sim-daltonism/">Sim Daltonism</a>:
-        <q>The color blindness simulator</q>.
-        This simulator, developed by Michel Fortin, is available for i<abbr>OS</abbr> and Mac <abbr>OS</abbr>.
-        The source code is available under the terms of the <span lang="en-US">Apache 2.0 License</span> in the
-        <a href="https://github.com/michelf/sim-daltonism/">sim-daltonism GitHub repository</a>.
-      </li>
       <li>Lea Verou&rsquo;s
         <a href="http://leaverou.github.io/contrast-ratio/">Contrast Ratio</a>
         is another tool for checking the contrast of web colours.
@@ -508,16 +482,6 @@
         The tool's source code is available on
         <a href="https://github.com/toolness/accessible-color-matrix">GitHub</a>.
       </li>
-      <li><a href="http://www.color-blindness.com/coblis-color-blindness-simulator/" lang="en-US">Coblis 
-        — Color Blindness Simulator</a> is a colour blindness simulator where you
-        can upload images and see what they look like through eight different
-        simulations of colour blindness.
-      </li>
-      <li><del datetime="2020-11-08"><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision Deficiency</a>
-        is a 
-        <a href="http://www.gimp.org/"><abbr title="GNU Image Manipulation Program">GIMP</abbr></a> 
-        plugin that simulates different colour vision deficiencies.</del>
-      </li>
       <li>Bracey, Kezz:
         <a href="https://webdesign.tutsplus.com/articles/how-to-use-the-contrast-checker-in-chrome-devtools--cms-31504">How to Use the Contrast Checker in Chrome DevTools</a>,
         <i class="website">Envato Tuts+</i>, 22.10.2018.
@@ -528,9 +492,59 @@
         <a href="https://github.com/Myndex/SAPC-APCA">GitHub repository for the <abbr>APCA</abbr> Contrast Calculator</a>.
         <!--Referrer (30.11.2020): https://twitter.com/HenriHelvetica/status/1333303650794528768 -->
       </li>
+    </ul>
+
+    <h3>Colour Blindness Simulators</h3>
+    <ul>
+      <li><a href="http://www.vischeck.com/vischeck/">Vischeck</a> is a tool that simulates
+        colour vision deficiencies (&ldquo;colour-blind vision&rdquo;).
+        The tool was developed as Stanford University; the
+        <a href="http://www.vischeck.com/info/">Info &amp; Links</a> page
+        provides information about the algorithms in the code and
+        points to other interesting web pages about colour blindness.
+        <br />
+        <a href="http://www.vischeck.com/daltonize/">Daltonize</a> is a tool that
+        <q cite="http://www.vischeck.com/" lang="en-US">corrects images for colorblind viewers</q>.
+      </li>
+      <li><a href="http://colororacle.org/" lang="en-US">Color Oracle</a> is a free
+        and open source tool that simulates colour blindness.
+        <span lang="en-US">Color Oracle&rsquo;s</span> website also provides
+        <a href="http://colororacle.org/design.html">design tips</a> for maps and
+        information graphics that are accessible for colour-impaired readers.
+        <br />The tool is written in Java and works on Windows, Mac OS X and Linux.
+        <a href="https://github.com/nvkelso/color-oracle-java"><span lang="en-US">Color Oracle&rsquo;s</span> 
+        source code</a> is available on GitHub under the <span lang="en-US"><abbr>MIT</abbr> License</span>.
+      </li>
+      <li>
+        <a href="https://michelf.ca/projects/sim-daltonism/">Sim Daltonism</a>:
+        <q>The color blindness simulator</q>.
+        This simulator, developed by Michel Fortin, is available for i<abbr>OS</abbr> and Mac <abbr>OS</abbr>.
+        The source code is available under the terms of the <span lang="en-US">Apache 2.0 License</span> in the
+        <a href="https://github.com/michelf/sim-daltonism/">sim-daltonism GitHub repository</a>.
+      </li>
+      <li><a href="http://www.color-blindness.com/coblis-color-blindness-simulator/" lang="en-US">Coblis — Color Blindness Simulator</a>
+        is a colour blindness simulator where you can upload images and see what they look like through eight different
+        simulations of colour blindness.
+      </li>
       <li>
         <a href="https://www.myndex.com/CVD/">Myndex&trade; Color Vision Deficiency Simulator</a>:
         developed by Andrew Somers of Myndex.
+      </li>
+      <li><a href="http://www.rgblind.se/"><abbr>RG</abbr>Blind</a>
+        <q>is an open-source real-time color blindness simulation tool for the web.</q>
+        It can be used as a web page where you can enter a <abbr>URL</abbr>:
+        <a href="http://www.rgblind.se/url" lang="en-US">Online color blindness simulator for <abbr>URL</abbr>s</a>
+        It is also available as a browser extension for Google Chrome, Firefox and Opera.
+        See for example,
+        <a href="https://addons.mozilla.org/en-GB/firefox/addon/rgblind/"><abbr>RG</abbr>Blind on the Firefox Add-ons site</a>.
+        For the source code, see th
+        <a href="https://github.com/interaktivarum/rgblind"><abbr>RG</abbr>Blind repository on GitHub</a>,
+        where the source code is available under the terms of the <abbr>MIT</abbr> licence.
+      </li>
+      <li><del datetime="2020-11-08"><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision Deficiency</a>
+        is a
+        <a href="http://www.gimp.org/"><abbr title="GNU Image Manipulation Program">GIMP</abbr></a> 
+        plugin that simulates different colour vision deficiencies.</del>
       </li>
     </ul>
 
