--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -281,6 +281,13 @@
 
     <h2>Other Useful Resources</h2>
     <ul>
+      <li>
+        <a href="https://www.seowebdesignllc.com/a-complete-guide-to-accessible-front-end-components/">A Complete Guide To Accessible Front-End Components</a>,
+        <i class="website"><abbr>SEO</abbr> Web Design</i>, 22.03.2021.
+        <!--Referrer: anatom5 GmbH, 14.04.2021, https://twitter.com/anatom5/status/1382328468441079809
+            "#a11y "A Complete Guide To Accessible Front-End Components" sounds like clickbaiting, but this ist IMO one of the best collection of state of the art solutions I have come across since a long time. What do you think?"
+        -->
+      </li>
       <li>Whatsock:
         <a href="http://whatsock.com/tsg/">AccDC Technical Style Guide</a>:
         <q>designed to provide reliable and consistent interaction designs that are accessible to the highest percentage of people possible, and to establish a baseline for Functional Accessibility that can be utilized, built upon, studied, and tested against.</q>
